<resources>
    <string name="app_name">CodeBrains</string>
    <string name="login">Log In</string>
    <string name="newto">New to codeBrains? Sign Up</string>
    <string name="sub">Sign up to find work you love</string>

    <string name="log">Log In to find work you love</string>
    <string name="title_activity_login">login</string>
    <string name="prompt_email">        Email</string>
    <string name="prompt_password">        Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="conti">Continue with Google</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Log in to CodeBrains"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="country">"Country"</string>
    <string name="pas">"Password (8 or more characters)"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="rating">"Automated Ratings"</string>
    <string name="free">"Freelancing"</string>
    <string name="Payment">Payment Efficiently</string>
    <!--    <string name=""-->


    <string name="find_tasker">"Find a tasker at extremely preferential price"</string>
    <string name="client_user">Client User</string>
    <string name="freelancer">Freelancer</string>
    <string name="talent_acquisition">Talent Acquisition Made Simple</string>
    <string name="find_talent">Find Talent Instantly</string>
    <string name="find_talent_desc">Submit your job description, and our AI-powered platform instantly provides a tailored list of verified candidates.</string>
    <string name="hire_with_confidence">Hire with Confidence</string>
    <string name="hire_with_confidence_desc">We handle contracts, negotiate terms, and manage onboarding, ensuring a smooth hiring experience.</string>
    <string name="empower_talent">Empower Talent Globally</string>
    <string name="empower_talent_desc">Our platform connects businesses with top talent worldwide, enabling diverse and innovative teams.</string>
    <string name="start">"Start Now !"</string>
    <string name="jdoe">"John Doe"</string>
    <string name="age">"Age : 18"</string>
    <string name="user_id">"User_1234"</string>
    <string name="pro">Software Engineer</string>
    <string name="about">About</string>
    <string name="about_info">This is about john doe</string>
    <string name="title_activity_homepage">Homepage</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_homepage_developer">Homepage_developer</string>


    <string name="job_header_image_desc">Header image showing available job opportunities</string>


    <string name="job_details">Job Details</string>
    <string name="freelancer_info">Freelancer Information</string>
    <string name="additional_info">Additional Information</string>
    <string name="id_label">ID:</string>
    <string name="job_id_label">Job ID:</string>
    <string name="reason_label">Reason</string>
    <string name="analyzer_label">Analyzer</string>
    <string name="status_label">Status</string>
    <string name="timestamp_label">Timestamp</string>
    <string name="update_status">Update Status</string>
    <string name="header_image_description">Job header image</string>

</resources>